# kasep100

./: README.md  package-lock.json  package.json
src/: index.html  input.html  singlepoint.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  remote.html
src/css/: global.css
src/css/style/: home.css  input.css  singlepoint.css
